--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2022-09-30  Jose E. Marchesi  <jemarch@gnu.org>
+
+	* etc/hacking.org (Writing REPL tests): Fix typo.
+	(General REPL tests): Fix ordering.
+	(Command REPL tests): Likewise.
+	(PVM values in AST nodes): Update to new implementation.
+
 2022-09-26  Jose E. Marchesi  <jemarch@gnu.org>
 
 	* etc/poke.rec (Support bit-concatenation in l-value): Removed as
