--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,14 @@
 2022-10-03  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* pickles/pe-debug.pk: New file.
+	* pickles/pe.pk (PE_Debug_Directory_Entry): New type.
+	Load pe-debug.pk.
+	(PE_Name): New method match_p.
+	* pickles/Makefile.am (dist_pickles_DATA): Add pe-debug.pk and
+	pe-riscv.pk.
+
+2022-10-03  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/pe.pk: Load architecture-specific PE parts.
 	* pickles/coff.pk (COFF_LINENO): New type.
 	(COFF_Shdr): Use COFF_LINENO instead of COFF_LINENO_16.
