--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,23 @@
 2022-10-03  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-diag.h: Prototype for pkl_loc_to_source.
+	* libpoke/pkl-diag.c (pkl_loc_to_source): New function.
+	* libpoke/pkl-tab.y (pkl_make_assertion): Call pkl_loc_to_source.
+	* pickles/pe.pk: Use asserts without explicit message.
+	* pickles/color.pk: Likewise.
+	* pickles/asn1-ber.pk: Likewise.
+	* pickles/mcr.pk: Likewise.
+	* pickles/rgb24.pk: Likewise.
+	* testsuite/poke.pkl/assert-6.pk: New test.
+	* testsuite/poke.pkl/assert-7.pk: Likewise.
+	* testsuite/poke.pktest/pktest-11.pk: Adapt test.
+	* testsuite/poke.pktest/pktest-7.pk: Likewise.
+	* testsuite/poke.pktest/pktest-5.pk: Likewise.
+	* testsuite/Makefile.am (EXTRA_DIST): Add new tests.
+	* doc/poke.texi (assert): Document new behavior.
+
+2022-10-03  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/pe-debug.pk: New file.
 	* pickles/pe.pk (PE_Debug_Directory_Entry): New type.
 	Load pe-debug.pk.
