libpoke, poke: introduce a tracer for Poke
This patch adds tracing capabilities to the Poke compiler and runtime.
When tracing is enabled the compiler adds some instrumentalization to
the compiled code in order to trigger tracing events in certain
circumstances.

Tracing is enabled by just setting the value of the variable
pk_tracer_p, like in:

  (poke) pk_tracer_p = 1

The poke application, however, provides a setting on top of it that is
more user friendly:

  (poke) .help tracer
  .set tracer - whether to activate the Poke tracer

  Synopsis:

    .set tracer {yes,no}

  This setting determines whether the Poke compiler and runtime
  will generate tracing events or not.  This is mainly useful
  for debugging puposes.

  Beware that enabling tracer will undoubtly have an impact
  in performance, and that every type compiled when tracing is
  enabled will contain instrumentalization.  This means you
  will most likely want to re-compile the types with tracing
  disabled once the debugging is done.

  This setting is `no' by default.
  (poke) .set tracer yes

Right now one tracing event is supported: PK_TV_FIELD_MAPPED.  This
event is raised when an union or struct field has been successfully
mapped.

Events can be handled by mean of setting actions for them.  This can
be done at any time by calling a method in the tracer dispatcher.  For
example:

  pk_tracer_dispatch.set_action (PK_TV_FIELD_MAPPED,
                                 may_field_mapped_handler);

The default action for all tracing events is to simply do nothing.
However, the poke application registers actions that emit useful
tracing messages to the screen.

Example:

  (poke) .set tracer yes
  (poke) .file ~/mmaa64
  (poke) load pe
  (poke) PE_File @ 0#B
  tracer: field_mapped: pe_offset = 0x00000080U#B @ 0x00000000000001e0UL#b
  tracer: field_mapped: signature = [0x50UB,0x45UB,0x00UB,0x00UB] @ 0x0000000000000400UL#b
  tracer: field_mapped: machine = 0xaa64UH @ 0x0000000000000420UL#b
  tracer: field_

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,24 @@
 2022-10-03  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-rt.pk (pk_tracer_p): New variable.
+	(PK_TV_FIELD_MAPPED): Likewise.
+	(PK_TV_NUM_EVENTS): Likewise.
+	(Pk_Tracer_Action): New type.
+	(Pk_Tracer_Dispatch_Table): Likewise.
+	(pk_tracer_dispatch): New variable.
+	* libpoke/pkl.h: Prototype for pkl_tracer_p.
+	(PK_TV_FIELD_MAPPED): Define.
+	* libpoke/pkl.c (pkl_tracer_p): New function.
+	* libpoke/ras: Support referring to tracing events with PK_TV_*.
+	* libpoke/pkl-gen.pks (struct_field_mapper): Generate
+	PK_TV_FIELD_MAPPED.
+	* poke/pk-tracer.pk: New file.
+	* poke/poke.pk: Load pk-tracer.pk.
+	* poke/pk-settings.pk: Add setting for tracer.
+	* poke/Makefile.am (dist_app_DATA): Add pk-tracer.pk.
+
+2022-10-03  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/pe.pk (PE_Load_Configuration_Layout): New type.
 	(PE_GUARD_*): New variables.
 
