--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,10 @@
 2022-10-04  Jose E. Marchesi  <jemarch@gnu.org>
 
+	* libpoke/pkl-gen.pks (struct_field_mapper): Force flat omode when
+	formatting values for PK_TV_FIELD_MAPPED events.
+
+2022-10-04  Jose E. Marchesi  <jemarch@gnu.org>
+
 	* pickles/pe.pk (PE_Opt_Hdr): Fix the constraint for
 	file_alignment.
 
